apps/seerr/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seerr
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: seerr
      app.kubernetes.io/name: seerr
  serviceName: seerr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: seerr
        app.kubernetes.io/name: seerr
    spec:
      containers:
        - name: seerr
          image: seerr
          resources:
            requests:
              cpu: 25m
              memory: 423Mi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/status
              port: http
            initialDelaySeconds: 20
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 5055
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/status
              port: http
            initialDelaySeconds: 20
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 360
            httpGet:
              path: /api/v1/status
              port: http
            initialDelaySeconds: 20
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /app/config
      securityContext:
        fsGroup: 1000
      volumes:
        - name: startup-config
          secret:
            secretName: seerr
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
