apps/seerr/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 5055
      targetPort: http
  selector:
    app.kubernetes.io/instance: seerr
    app.kubernetes.io/name: seerr
