apps/seerr/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
spec:
  rules:
    - backendRefs:
        - name: seerr
          port: 5055
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr-api
spec:
  rules:
    - matches:
        - headers:
            - name: X-Api-Key
              type: RegularExpression
              value: .+
      backendRefs:
        - name: seerr
          port: 5055
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr-redirect
spec:
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
