apps/seerr/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: seerr
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jellyfin
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: maintainerr
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
      ports:
        - port: http
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: seerr
      app.kubernetes.io/name: seerr
  policyTypes:
    - Ingress
